--- a/Spielplan.html
+++ b/Spielplan.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tischtennis Team-Losung v3.0</title>
+    <title>Adminbereich - Tischtennis Team-Lösung</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
             text-align: center;
+            margin: 20px;
         }
         input, button {
-            margin: 10px;
+            margin: 5px;
             padding: 10px;
             font-size: 16px;
         }
@@ -32,25 +32,32 @@
             padding: 10px;
             text-align: center;
         }
-        .hidden {
-            display: none;
-        }
-        .admin-only {
-            display: none;
-        }
     </style>
 </head>
 <body>
-    <h1>Tischtennis-Team-Lösung</h1>
+    <h1>Adminbereich - Tischtennis Team-Lösung</h1>
 
-    <!-- Benutzerbereich -->
-    <div id="userSection">
-        <h2>Spieler hinzufügen</h2>
-        <input type="text" id="playerName" placeholder="Spielername">
-        <button onclick="addPlayer()">Hinzufügen</button>
+    <!-- Login-Bereich -->
+    <div id="loginSection">
+        <h3>Bitte Passwort eingeben:</h3>
+        <input type="password" id="adminPassword" placeholder="Passwort">
+        <button onclick="checkPassword()">Einloggen</button>
+    </div>
+
+    <!-- Admin-Funktionen nach Login -->
+    <div id="adminSection" style="display: none;">
+        <h2>Adminbereich - Team-Erstellung</h2>
+
+        <div>
+            <input type="text" id="playerName" placeholder="Spielername">
+            <button onclick="addPlayer()">Spieler hinzufügen</button>
+        </div>
+
         <h3>Spielerliste:</h3>
         <ul id="playerList"></ul>
+
         <button onclick="drawTeams()">Teams losen</button>
+
         <h3>Teams:</h3>
         <table id="teamTable">
             <thead>
@@ -63,6 +70,7 @@
             </thead>
             <tbody></tbody>
         </table>
+
         <h3>Modus wählen:</h3>
         <div>
             <label>
@@ -73,198 +81,200 @@
             </label>
         </div>
         <button onclick="generate()">Spielplan/Gruppen erstellen</button>
+
         <div id="outputContainer" class="hidden">
             <h3 id="outputTitle"></h3>
             <div id="outputContent"></div>
         </div>
     </div>
 
-    <!-- Adminbereich (geschützt) -->
-    <div id="adminSection" class="admin-only">
-        <h2>Admin Bereich</h2>
-        <h3>Spielplan:</h3>
-        <table id="scheduleTable">
-            <thead>
-                <tr>
-                    <th>Spiel</th>
-                    <th>Team 1</th>
-                    <th>Team 2</th>
-                    <th>Ergebnis</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-        <h3>Zwischenstand:</h3>
-        <table id="standingsTable">
-            <thead>
-                <tr>
-                    <th>Platz</th>
-                    <th>Team</th>
-                    <th>Punkte</th>
-                    <th>Spiele</th>
-                    <th>+/-</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-        <h3>Team-Mitglieder:</h3>
-        <table id="teamsTable">
-            <thead>
-                <tr>
-                    <th>Team</th>
-                    <th>Mitglied 1</th>
-                    <th>Mitglied 2</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </div>
-
-    <!-- Login für Admin -->
-    <div id="loginSection">
-        <h2>Admin Login</h2>
-        <input type="password" id="adminPassword" placeholder="Passwort">
-        <button onclick="login()">Login</button>
-    </div>
-
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-        import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyAksVQRYriHb9gS7TjgeN3faX10IoKJBIw",
-            authDomain: "tischtennis-9575d.firebaseapp.com",
-            databaseURL: "https://tischtennis-9575d-default-rtdb.firebaseio.com",
-            projectId: "tischtennis-9575d",
-            storageBucket: "tischtennis-9575d.appspot.com",
-            messagingSenderId: "164931288159",
-            appId: "1:164931288159:web:5863d07a4cf511ee462fea"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const db = getDatabase(app);
-
+        const correctPassword = "admin123"; // Setze das Passwort hier
         const players = [];
         let teams = [];
         let schedule = [];
 
-        // Spieler hinzufügen
+        function checkPassword() {
+            const enteredPassword = document.getElementById('adminPassword').value;
+            if (enteredPassword === correctPassword) {
+                document.getElementById('loginSection').style.display = 'none';
+                document.getElementById('adminSection').style.display = 'block';
+            } else {
+                alert('Falsches Passwort');
+            }
+        }
+
         function addPlayer() {
             const playerName = document.getElementById('playerName').value.trim();
             if (playerName && !players.includes(playerName)) {
                 players.push(playerName);
                 document.getElementById('playerList').innerHTML += `<li>${playerName}</li>`;
                 document.getElementById('playerName').value = '';
-                savePlayersToDatabase();
             } else {
-                alert(playerName ? 'Spieler existiert bereits.' : 'Spielername ist leer.');
+                alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
             }
         }
 
-        // Spieler in Firebase speichern
-        function savePlayersToDatabase() {
-            const playersRef = ref(db, 'players');
-            set(playersRef, players);
-        }
-
-        // Teams losen
         function drawTeams() {
-            if (players.length % 2 !== 0) {
-                alert('Bitte eine gerade Anzahl an Spielern hinzufügen.');
+            const teamTable = document.getElementById('teamTable').querySelector('tbody');
+            teamTable.innerHTML = '';
+            teams = [];
+
+            if (players.length < 2) {
+                alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
                 return;
             }
 
-            teams = [];
-            while (players.length) {
-                const player1 = players.pop();
-                const player2 = players.pop();
-                const teamName = `Team ${teams.length + 1}`;
-                teams.push([player1, player2, teamName]);
-            }
-            displayTeams();
-            saveTeamsToDatabase();
-        }
+            const shuffledPlayers = [...players];
+            shuffle(shuffledPlayers);
 
-        // Teams in Firebase speichern
-        function saveTeamsToDatabase() {
-            const teamsRef = ref(db, 'teams');
-            set(teamsRef, teams);
-        }
-
-        // Teams anzeigen
-        function displayTeams() {
-            const teamTableBody = document.getElementById('teamTable').getElementsByTagName('tbody')[0];
-            teamTableBody.innerHTML = '';
-            teams.forEach((team, index) => {
-                const row = teamTableBody.insertRow();
-                row.insertCell(0).innerText = `Team ${index + 1}`;
-                row.insertCell(1).innerText = team[0];
-                row.insertCell(2).innerText = team[1];
-                row.insertCell(3).innerText = team[2];
-            });
-        }
-
-        // Login für Admin
-        function login() {
-            const password = document.getElementById('adminPassword').value;
-            const correctPassword = "admin123";  // Beispiel: hartcodiertes Passwort
-            if (password === correctPassword) {
-                document.getElementById('adminSection').classList.remove('admin-only');
-                document.getElementById('loginSection').classList.add('hidden');
-            } else {
-                alert('Falsches Passwort!');
+            let teamCount = 1;
+            while (shuffledPlayers.length >= 2) {
+                const player1 = shuffledPlayers.pop();
+                const player2 = shuffledPlayers.pop();
+                const teamName = `Team ${teamCount}`;
+                teams.push({ player1, player2, teamName });
+                const row = `<tr>
+                    <td>${teamName}</td>
+                    <td>${player1}</td>
+                    <td>${player2}</td>
+                    <td><input type="text" class="rename-input" value="${teamName}" onchange="updateTeamName(${teamCount - 1}, this.value)"></td>
+                </tr>`;
+                teamTable.innerHTML += row;
+                teamCount++;
             }
         }
 
-        // Spielplan erstellen (Admin)
         function generate() {
             const mode = document.querySelector('input[name="mode"]:checked').value;
+            if (teams.length === 0) {
+                alert('Bitte zuerst Teams losen!');
+                return;
+            }
+
             if (mode === 'roundRobin') {
-                generateRoundRobinSchedule();
-            } else {
-                generateGroupPhaseSchedule();
+                generateRoundRobin();
+            } else if (mode === 'groupPhase') {
+                generateGroupPhase();
             }
         }
 
-        // Spielplan (Rundenturnier) erstellen
-        function generateRoundRobinSchedule() {
+        function generateRoundRobin() {
             schedule = [];
+            const outputContainer = document.getElementById('outputContainer');
+            const outputContent = document.getElementById('outputContent');
+            const outputTitle = document.getElementById('outputTitle');
+
+            outputContainer.classList.remove('hidden');
+            outputTitle.textContent = 'Spielplan: Jeder gegen Jeden';
+            outputContent.innerHTML = '';
+
             for (let i = 0; i < teams.length; i++) {
                 for (let j = i + 1; j < teams.length; j++) {
-                    schedule.push({ team1: teams[i], team2: teams[j] });
+                    schedule.push({
+                        match: `Spiel ${schedule.length + 1}`,
+                        team1: teams[i].teamName,
+                        team2: teams[j].teamName
+                    });
                 }
             }
-            displaySchedule();
-            saveScheduleToDatabase();
+
+            const table = document.createElement('table');
+            table.innerHTML = `
+                <thead>
+                    <tr>
+                        <th>Spiel</th>
+                        <th>Team 1</th>
+                        <th>Team 2</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    ${schedule.map(s => `<tr>
+                        <td>${s.match}</td>
+                        <td>${s.team1}</td>
+                        <td>${s.team2}</td>
+                    </tr>`).join('')}
+                </tbody>
+            `;
+            outputContent.appendChild(table);
         }
 
-        // Spielplan (Gruppenphase) erstellen
-        function generateGroupPhaseSchedule() {
-            // Hier kann eine Gruppenphasenerstellung basierend auf den Teams hinzugefügt werden
+        function generateGroupPhase() {
+            const outputContainer = document.getElementById('outputContainer');
+            const outputContent = document.getElementById('outputContent');
+            const outputTitle = document.getElementById('outputTitle');
+
+            outputContainer.classList.remove('hidden');
+            outputTitle.textContent = 'Gruppenphase';
+            outputContent.innerHTML = '';
+
+            const shuffledTeams = [...teams];
+            shuffle(shuffledTeams);
+
+            const groupA = [];
+            const groupB = [];
+
+            while (shuffledTeams.length > 0) {
+                if (groupA.length <= groupB.length) {
+                    groupA.push(shuffledTeams.pop());
+                } else {
+                    groupB.push(shuffledTeams.pop());
+                }
+            }
+
+            const groupMatches = [];
+            function createGroupMatches(group, groupName) {
+                const groupHTML = `
+                    <h4>${groupName}</h4>
+                    <ul>
+                        ${group.map(team => `<li>${team.teamName}</li>`).join('')}
+                    </ul>
+                `;
+                outputContent.innerHTML += groupHTML;
+
+                for (let i = 0; i < group.length; i++) {
+                    for (let j = i + 1; j < group.length; j++) {
+                        groupMatches.push({
+                            match: `${groupName} - Spiel ${groupMatches.length + 1}`,
+                            team1: group[i].teamName,
+                            team2: group[j].teamName
+                        });
+                    }
+                }
+            }
+
+            createGroupMatches(groupA, 'Gruppe A');
+            createGroupMatches(groupB, 'Gruppe B');
+
+            const table = document.createElement('table');
+            table.innerHTML = `
+                <thead>
+                    <tr>
+                        <th>Spiel</th>
+                        <th>Team 1</th>
+                        <th>Team 2</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    ${groupMatches.map(m => `<tr>
+                        <td>${m.match}</td>
+                        <td>${m.team1}</td>
+                        <td>${m.team2}</td>
+                    </tr>`).join('')}
+                </tbody>
+            `;
+            outputContent.appendChild(table);
         }
 
-        // Spielplan anzeigen
-        function displaySchedule() {
-            const scheduleTableBody = document.getElementById('scheduleTable').getElementsByTagName('tbody')[0];
-            scheduleTableBody.innerHTML = '';
-            schedule.forEach((match, index) => {
-                const row = scheduleTableBody.insertRow();
-                row.insertCell(0).innerText = index + 1;
-                row.insertCell(1).innerText = match.team1[2];
-                row.insertCell(2).innerText = match.team2[2];
-                row.insertCell(3).innerText = '-';
-            });
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
         }
 
-        // Spielplan in Firebase speichern
-        function saveScheduleToDatabase() {
-            const scheduleRef = ref(db, 'schedule');
-            set(scheduleRef, schedule);
-        }
-
-        // Ergebnisse und Zwischenstände anzeigen (für alle)
-        function displayResults() {
-            // Ergebnisse und Zwischenstände aus der Firebase-Datenbank holen und anzeigen
+        function updateTeamName(index, newName) {
+            teams[index].teamName = newName;
         }
     </script>
 </body>
